fix: Spacing for account balances

--- a/src/aux-server/aux-web/aux-auth/site/AuthAccountBalances/AuthAccountBalances.css
+++ b/src/aux-server/aux-web/aux-auth/site/AuthAccountBalances/AuthAccountBalances.css
@@ -17,7 +17,7 @@
  */
 
 .auth-account-balances {
-    padding: 16px;
+    margin-top: 16px;
 }
 
 .loading {
